[gd_scene load_steps=3 format=3 uid="uid://dojgmv85rvmht"]

[ext_resource type="Texture2D" uid="uid://d0kn8ocaeinst" path="res://assets/ui/score.png" id="1_4abl6"]
[ext_resource type="Script" uid="uid://x5ldwcfvwn6n" path="res://src/ui/currency_counter.gd" id="1_374kk"]

[node name="CurrencyCounter" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_374kk")

[node name="TextureRectCurrency" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_4abl6")
expand_mode = 3

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="LabelValue" type="Label" parent="."]
layout_mode = 2
text = "0"
